Ticket #27724: Creation of fhr css styles. Prevention of line breaks in table toolbars and certain button labels.

--- a/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
@@ -147,10 +147,12 @@ with hard coded popup window dimension
 	box-shadow: inset 0px 0px 0px 2px var(--button-secondary);
 }
 
-.tlButton 
+.tlButton,
+.tlButtonLabel,
 .fltSubContent .cMenuButton.menuEntryEnabled,
-.tlButtonLabel, .cDefaultButton button {
+.cDefaultButton button {
 	color: var(--button-secondary);
+	white-space: nowrap;
 }
 
 .tlButton .cmdImg,
